k8s/cloud-config-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-config
  labels:
    app: cloud-config
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-config
  template:
    metadata:
      labels:
        app: cloud-config
    spec:
      containers:
      - name: cloud-config
        image: leferez/cloud-config:latest
        ports:
        - containerPort: 9296
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 9296
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 9296
          initialDelaySeconds: 60
          periodSeconds: 20
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-config
spec:
  selector:
    app: cloud-config
  ports:
  - port: 9296
    targetPort: 9296
  type: ClusterIP
