k8s/favourite-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favourite-service
  labels:
    app: favourite-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: favourite-service
  template:
    metadata:
      labels:
        app: favourite-service
    spec:
      containers:
      - name: favourite-service
        image: ecommerce-microservice-backend-app-favourite-service-container:latest
        ports:
        - containerPort: 8800
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8800
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8800
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: favourite-service
spec:
  selector:
    app: favourite-service
  ports:
  - port: 8800
    targetPort: 8800
  type: ClusterIP
