k8s/proxy-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-client
  labels:
    app: proxy-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-client
  template:
    metadata:
      labels:
        app: proxy-client
    spec:
      containers:
      - name: proxy-client
        image: selimhorri/proxy-client-ecommerce-boot:0.1.0
        ports:
        - containerPort: 8900
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8900
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8900
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-client
spec:
  selector:
    app: proxy-client
  ports:
  - port: 8900
    targetPort: 8900
  type: ClusterIP
