k8s/service-discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-discovery
  labels:
    app: service-discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-discovery
  template:
    metadata:
      labels:
        app: service-discovery
    spec:
      containers:
      - name: service-discovery
        image: selimhorri/service-discovery-ecommerce-boot:0.1.0
        ports:
        - containerPort: 8761
        readinessProbe:
          httpGet:
            path: /actuator/health # Eureka health endpoint
            port: 8761
          initialDelaySeconds: 20  # Espera 20s antes de la primera sonda
          periodSeconds: 10        # Sondea cada 10s
          failureThreshold: 3      # Considera fallido después de 3 intentos
        livenessProbe:
          httpGet:
            path: /actuator/health # Eureka health endpoint
            port: 8761
          initialDelaySeconds: 45  # Espera 45s antes de la primera sonda
          periodSeconds: 15        # Sondea cada 15s
          failureThreshold: 3      # Considera fallido después de 3 intentos
---
apiVersion: v1
kind: Service
metadata:
  name: service-discovery
spec:
  selector:
    app: service-discovery
  ports:
  - port: 8761
    targetPort: 8761
  type: ClusterIP
