k8s/shipping-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
  labels:
    app: shipping-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      containers:
      - name: shipping-service
        image: selimhorri/shipping-service-ecommerce-boot:0.1.0
        ports:
        - containerPort: 8600
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8600
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8600
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
spec:
  selector:
    app: shipping-service
  ports:
  - port: 8600
    targetPort: 8600
  type: ClusterIP
