k8s/ecommerce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: "nginx"
spec:
  rules:
  - host: ecommerce.local # Puedes usar este dominio con /etc/hosts
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
      - path: /zipkin
        pathType: Prefix
        backend:
          service:
            name: zipkin
            port:
              number: 9411
      - path: /eureka
        pathType: Prefix
        backend:
          service:
            name: service-discovery
            port:
              number: 8761
